--- a/css/bootstrap.3x7edd.css
+++ b/css/bootstrap.3x7edd.css
@@ -3358,7 +3358,7 @@ select[multiple].form-group-lg .form-control, textarea.form-group-lg .form-contr
 
     .btn-default.active, .btn-default.focus, .btn-default:active, .btn-default:focus, .btn-default:hover, .open > .dropdown-toggle.btn-default {
         color: #333;
-        background-color: #e6e6e6;
+        background-color: deepskyblue;
         border-color: #adadad;
     }
 
